kubeflow/helm/pipelines/dryrun/metadata/grpc-server/kubeflow-pipelines-metadata-grpc-server_Deployment.yml
# Source: pipelines/templates/metadata/grpc-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-pipelines-metadata-grpc-server
  namespace: kubeflow
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelines-metadata-grpc-server
      app.kubernetes.io/name: pipelines-metadata-grpc-server
      app.kubernetes.io/instance: kubeflow
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        sidecar.istio.io/inject: "true"
      labels:
        app: pipelines-metadata-grpc-server
        app.kubernetes.io/name: pipelines-metadata-grpc-server
        app.kubernetes.io/instance: kubeflow
    spec:
      serviceAccountName: kubeflow-pipelines-metadata-grpc-server
      securityContext: {}
      containers:
        - name: pipelines-metadata-grpc-server
          securityContext: {}
          image: "gcr.io/tfx-oss-public/ml_metadata_store_server:1.5.0"
          imagePullPolicy: IfNotPresent
          args:
            - --grpc_port=8080
            - --mysql_config_database=$(MYSQL_DATABASE)
            - --mysql_config_host=$(MYSQL_HOST)
            - --mysql_config_port=$(MYSQL_PORT)
            - --mysql_config_user=$(DBCONFIG_USER)
            - --mysql_config_password=$(DBCONFIG_PASSWORD)
            - --enable_database_upgrade=true
          command:
            - /bin/metadata_store_server
          ports:
            - name: api
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 3
            periodSeconds: 5
            tcpSocket:
              port: api
            timeoutSeconds: 2
          readinessProbe:
            initialDelaySeconds: 3
            periodSeconds: 5
            tcpSocket:
              port: api
            timeoutSeconds: 2
          resources: {}
