kubeflow/helm/pipelines/dryrun/metadata/grpc-server/kubeflow-pipelines-metadata-grpc-server_VirtualService.yml
# Source: pipelines/templates/metadata/grpc-server/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubeflow-pipelines-metadata-grpc-server
  namespace: kubeflow
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
spec:
  gateways:
    - "kubeflow-gateway"
  hosts:
    - "*"
  http:
    - headers:
        request:
          add:
            x-forwarded-prefix: /ml_metadata
      match:
        - uri:
            prefix: /ml_metadata
      rewrite:
        uri: /ml_metadata
      route:
        - destination:
            host: kubeflow-pipelines-metadata-envoy.kubeflow.svc.cluster.local
            port:
              number: 9090
